# magic-queue

./: .gitignore  API.md  CLAUDE.md  Dockerfile  Makefile  README.md  benchmark.js  docker-compose.cluster.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml  release.yml.disabled
benchmarks/: BENCHMARK_RESULTS.md  benchmark-results.json
client/: package.json  tsconfig.json
client/examples/: benchmark.ts  producer.ts  worker.ts
client/src/: client.ts  index.ts  queue.ts  worker.ts
docs/: BENCHMARKS.md
engine/src/protocol/: command.rs
engine/src/queue/: pull.rs
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: flashq.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
python/: README.md  pyproject.toml
python/examples/: benchmark.py  producer.py  worker.py
python/magicqueue/: __init__.py  client.py  queue.py  worker.py
sdk/go/: go.mod
sdk/php/: phpunit.xml
sdk/php/src/: AuthenticationException.php  ConnectionException.php  FlashQException.php  JobState.php  TimeoutException.php
sdk/php/tests/: FlashQTest.php
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: test_all_apis.py
sdk/python/flashq/: __init__.py  client.py  types.py  worker.py
sdk/typescript/: README.md  package.json  test-100.ts
sdk/typescript/examples/: 01-basic-usage.ts  02-worker.ts  03-job-options.ts  04-batch-operations.ts  05-progress-tracking.ts  06-dead-letter-queue.ts  07-cron-jobs.ts  08-queue-control.ts  09-job-dependencies.ts  10-authentication.ts  11-job-state-tracking.ts  12-real-world-email-queue.ts  13-websocket-events.ts  14-grpc-client.ts  15-idempotency-and-sync-workflow.ts  18-rag-pipeline.ts  README.md  benchmark-devastante.ts  benchmark-max.ts  benchmark-vs-bullmq.ts  binary-protocol-test.ts  bun-benchmark.ts  bun-realistic-test.ts  comparison-benchmark.ts  comparison-realistic.ts  comprehensive-test.ts  concurrency-test.ts  cpu-benchmark.ts  cpu-bound-100k-test.ts  cpu-intensive-test.ts  factorial-test.ts  heavy-benchmark.ts  integrity-100k-test.ts  large-payload-example.ts  million-benchmark.ts  production-test.ts  protocol-benchmark.ts  real-world-examples.ts  realistic-benchmark.ts  realistic-workload-tests.ts  (+9 more)
sdk/typescript/src/: bun-client.ts  bun-worker.ts  client.ts  index.ts  queue.ts  sandbox.ts  types.ts  worker.ts
sdk/typescript/src/client/: advanced.ts  connection.ts  core.ts  cron.ts  dlq.ts  flows.ts  index.ts  jobs.ts  metrics.ts  pubsub.ts  queue.ts  types.ts
sdk/typescript/tests/: client.test.ts  events.test.ts  integration.test.ts  queue.test.ts  types.test.ts  worker.test.ts
server/: Cargo.toml
server/proto/: queue.proto
server/src/: dashboard.rs  grpc.rs  http.rs  main.rs  protocol.rs  queue.rs  telemetry.rs
server/src/http/: cluster.rs  mod.rs  rate_limit.rs  settings.rs  webhooks.rs
server/src/protocol/: command.rs  mod.rs  response.rs
server/src/queue/: ack.rs  admin.rs  background.rs  browser.rs  cluster.rs  core.rs  cron.rs  dlq.rs  features.rs  flows.rs  job_ops.rs  kv.rs  logs.rs  manager.rs  mod.rs  monitoring.rs  persistence.rs  postgres.rs  pubsub.rs  pull.rs  push.rs  query.rs  queue_control.rs  rate_limit.rs  tests.rs  types.rs  validation.rs
server/src/queue/postgres/: batch.rs  cron.rs  jobs.rs  mod.rs  snapshot.rs
server/src/queue/tests/: edge_cases.rs  kv.rs  mod.rs
server/src/server/: connection.rs  handler.rs
server/static/: index.html
server/static/css/: dashboard.css
server/static/js/: api.js  charts.js  dashboard.js  settings.js  utils.js
website/: 404.html  index.html  sitemap.xml  styles.css
website/blog/: building-ai-pipelines.html  cost-optimization-ai-apis.html  cron-jobs-guide.html  docker-kubernetes-deployment.html  feed.xml  index.html  langchain-ai-agents.html  migrating-from-bullmq.html  nextjs-background-jobs.html  rag-chatbot-tutorial.html  security-best-practices.html  styles.css  testing-ai-pipelines.html  webhooks-event-driven.html
