[package]
name = "flashq-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }  # Stream utilities for gRPC + broadcast
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simd-json = "0.14"              # SIMD-accelerated JSON parsing (2-4x faster)
parking_lot = "0.12"            # Faster locks than std
mimalloc = { version = "0.1", default-features = false }  # Fast allocator
axum = { version = "0.8", features = ["ws"] }  # HTTP API + WebSocket
tower-http = { version = "0.6", features = ["cors"] }  # CORS middleware
rustc-hash = "2.0"              # FxHashMap - 2-3x faster hashing
once_cell = "1.19"              # Lazy static initialization
futures = "0.3"                 # Stream utilities for SSE
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }  # HTTP client for webhooks
hmac = "0.12"                     # HMAC for webhook signatures
sha2 = "0.10"                     # SHA-256 for webhook signatures
croner = "2.0"                     # Full 6-field cron expression parsing
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }  # DateTime for cron
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }  # PostgreSQL persistence
uuid = { version = "1.11", features = ["v4"] }  # Node ID generation for clustering

# gRPC
tonic = "0.12"                  # gRPC framework
prost = "0.13"                  # Protocol Buffers

[build-dependencies]
tonic-build = "0.12"            # Proto compilation

[profile.release]
lto = "fat"                     # Link-time optimization
codegen-units = 1               # Better optimization
panic = "abort"                 # No unwinding overhead
strip = true                    # Smaller binary
opt-level = 3                   # Maximum optimization
