[package]
name = "flashq-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization - OPTIMIZED
serde = { version = "1", features = ["derive"] }
serde_json = "1"                # Fallback for compatibility
sonic-rs = "0.5"                # Fastest JSON parser (SIMD, 30% faster than simd-json)
rmp-serde = "1.3"               # MessagePack binary protocol (3-5x faster, 40% smaller)

# Concurrency - OPTIMIZED
parking_lot = "0.12"            # Faster locks than std (2x)
mimalloc = { version = "0.1", default-features = false }  # Fast allocator (15% faster)
dashmap = "6"                   # Lock-free concurrent HashMap (40% faster lookups)
compact_str = "0.8"             # Inline strings up to 24 chars (zero heap alloc)

# HTTP
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }

# Hashing - OPTIMIZED
gxhash = "3"                    # Fastest hasher (AES-NI, 20-30% faster than FxHash)

# IDs - OPTIMIZED
ulid = "1.1"                    # Sortable IDs, faster than UUID v4

# Time
croner = "2.0"                  # Full 6-field cron expression parsing
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"] }

# HTTP Client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"

# gRPC
tonic = "0.13"
prost = "0.13"

# Utils
once_cell = "1.19"
futures = "0.3"
url = "2"                           # URL parsing for webhook validation

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
tonic-build = "0.13"

[profile.release]
lto = "fat"                     # Link-time optimization
codegen-units = 1               # Better optimization
panic = "abort"                 # No unwinding overhead
strip = true                    # Smaller binary
opt-level = 3                   # Maximum optimization
overflow-checks = false         # Disable overflow checks (faster)
debug = false                   # No debug info
incremental = false             # Full rebuild for max optimization

[profile.dev]
opt-level = 1                   # Some optimization in dev for faster tests
