[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashq"
version = "0.1.0"
description = "High-performance job queue client for FlashQ"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FlashQ Team"}
]
keywords = ["job-queue", "async", "worker", "task-queue", "flashq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
http = ["aiohttp>=3.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "aiohttp>=3.8.0",
]
all = [
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/egeominotti/flashq"
Documentation = "https://github.com/egeominotti/flashq#readme"
Repository = "https://github.com/egeominotti/flashq"
Issues = "https://github.com/egeominotti/flashq/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["flashq*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
